--- a/mean_project/src/app/header/header.component.html
+++ b/mean_project/src/app/header/header.component.html
@@ -22,7 +22,7 @@
         </li>
       </ul>
       <ul class="nav justify-content-end"> <!-- Change the class here -->
-        <li class="nav-item">
+        <li class="nav-item login">
           <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
         </li>
       </ul>
