--- a/mean_project/src/app/header/header.component.html
+++ b/mean_project/src/app/header/header.component.html
@@ -12,13 +12,13 @@
           <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about" routerLinkActive="active">About Us</a>
+          <a class="nav-link" routerLink="/about-us" routerLinkActive="active">About Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/articles" routerLinkActive="active">Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact Us</a>
+          <a class="nav-link" routerLink="/contact-us" routerLinkActive="active">Contact Us</a>
         </li>
       </ul>
       <ul class="nav justify-content-end"> <!-- Change the class here -->
