--- a/mean_project/src/app/header/header.component.html
+++ b/mean_project/src/app/header/header.component.html
@@ -25,6 +25,9 @@
         <li class="nav-item login">
           <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
         </li>
+        <li class="nav-item login">
+          <a class="nav-link" routerLink="/register" routerLinkActive="active">Sign Up</a>
+        </li>
       </ul>
     </div>
   </div>
